syntax = "proto3";
package models;
// Require Go Package
option go_package = "/models";

// Error Message returned from Core Library
message ErrorMessage {
  Type type = 1;         // Error Type Occurred
  Severity severity = 2; // 1-4 Scale of Error
  string message = 3;    // Client Error Message
  string data = 4;       // Any Attached Error Data
  string error = 5;      // Received Error

  // Error Type from Enum
  enum Type {
    // General
    MARSHAL = 0;    // Error occurred during marshalling
    UNMARSHAL = 1;  // Error occurred during unmarshalling
    IP_RESOLVE = 2; // Error occurred during IP Address Resolution
    IP_LOCATE = 3;  // Error occurred during IP Address Location
    BOOTSTRAP = 4;  // Error occurred during Bootstrapping
    DEVICE_ID = 60; // Error occurred during Device ID Generation

    // Topic
    TOPIC_JOIN = 5;     // Error occurred during Topic Join
    TOPIC_CREATE = 6;   // Error occurred during Topic Creation
    TOPIC_INVALID = 7;  // Error occurred during Topic Invalid
    TOPIC_RPC = 8;      // Error occurred during Topic RPC
    TOPIC_SUB = 9;      // Error occurred during Topic Subscription
    TOPIC_HANDLER = 10; // Error occurred during Topic Handler
    TOPIC_LEAVE = 11;   // Error occurred during Topic Leave
    TOPIC_MESSAGE = 12; // Error occurred during Topic Message
    TOPIC_UPDATE = 13;  // Error occurred during Topic Update

    // User
    USER_CREATE = 17; // Error occurred during User Creation
    USER_SAVE = 18;   // Error occurred during User Save
    USER_LOAD = 19;   // Error occurred during User Load
    USER_FS = 20;     // Error occurred during User File System
    USER_UPDATE = 21; // Error occurred during User Update

    // Transfer
    TRANSFER_START = 14; // Error occurred during Transfer Start
    TRANSFER_CHUNK = 15; // Error occurred during Transfer Chunk
    TRANSFER_END = 16;   // Error occurred during Transfer End
    INCOMING = 22;       // Error occurred during Incoming Transfer
    OUTGOING = 23;       // Error occurred during Outgoing Transfer
    SESSION = 24;        // Error occurred during Session Transfer

    // Host
    HOST_DHT = 25;    // Error occurred during DHT Host
    HOST_KEY = 26;    // Error occurred during Host Key Generation
    HOST_STREAM = 27; // Error occurred during Host Stream
    HOST_START = 28;  // Error occurred during Host Start
    HOST_PUBSUB = 29; // Error occurred during Host PubSub
    HOST_INFO = 37;   // Error occurred during Host Info
    HOST_MDNS = 57;   // Error occurred during Host MDNS
    CRYPTO_GEN = 30;  // Error occurred during Crypto Generation

    // Peer
    PEER_NOT_FOUND_INVITE = 31;   // Error occurred during Peer Invitation
    PEER_NOT_FOUND_REPLY = 32;    // Error occurred during Peer Reply
    PEER_NOT_FOUND_TRANSFER = 33; // Error occurred during Peer Transfer
    PEER_PUBKEY_DECODE = 58; // Error occurred during Peer Public Key Decode
    PEER_PUBKEY_UNMARSHAL =
        59;                 // Error occurred during Peer Public Key Unmarshal
    URL_HTTP_GET = 34;      // Error occurred during URL HTTP GET
    URL_INFO_RESP = 35;     // Error occurred during URL Info Response
    FAILED_CONNECTION = 36; // Error occurred during Failed Connection

    // Key Pair
    KEY_SET = 38;     // Error occurred during Key Pair Set
    KEY_INVALID = 39; // Error occurred during Key Pair Invalid
    KEY_ID = 40;      // Error occurred during Key Pair ID

    // Memory Store
    STORE_PUT = 41;  // Error occurred during Memory Store Put
    STORE_GET = 42;  // Error occurred during Memory Store Get
    STORE_FIND = 43; // Error occurred during Memory Store Find
    STORE_INIT = 44; // Error occurred during Memory Store Init

    // Textile Client
    TEXTILE_START_CLIENT = 45; // Error occurred during Textile Client Start
    TEXTILE_USER_CTX = 46;     // Error occurred during Textile User Context
    TEXTILE_TOKEN_CTX = 47;    // Error occurred during Textile Token Context

    // Threads Service
    THREADS_START_NEW = 48; // Error occurred during Threads Service Start New
    THREADS_START_EXISTING =
        49; // Error occurred during Threads Service Start Existing
    THREADS_LIST_ALL = 50; // Error occurred during Threads Service List All

    // Mailbox Service
    MAILBOX_START_NEW = 51; // Error occurred during Mailbox Service Start New
    MAILBOX_START_EXISTING =
        52; // Error occurred during Mailbox Service Start Existing
    MAILBOX_LIST_ALL = 53; // Error occurred during Mailbox Service List All
    MAILBOX_MESSAGE_OPEN =
        54; // Error occurred during Mailbox Service Message Open
    MAILBOX_MESSAGE_SEND =
        55; // Error occurred during Mailbox Service Message Send
    MAILBOX_MESSAGE_PEER_PUBKEY =
        56; // Error occurred during Mailbox Service Message Peer Public Key
    MAILBOX_EVENT_STATE =
        61; // Error occurred during Mailbox Service Event State
    MAILBOX_MESSAGE_READ =
        66; // Error occurred during Mailbox Service Message Read
    MAILBOX_MESSAGE_UNMARSHAL =
        67; // Error occurred during Mailbox Service Message Unmarshal
    MAILBOX_MESSAGE_DELETE =
        68; // Error occurred during Mailbox Service Message Delete
    MAILBOX_ACTION_INVALID =
        69; // Error occurred during Mailbox Service Action Invalid

    // Push Notifications
    PUSH_SINGLE = 62;    // Error occurred during Push Notifications Single
    PUSH_MULTIPLE = 63;  // Error occurred during Push Notifications Multiple
    PUSH_START_APP = 64; // Error occurred during Push Notifications Start App
    PUSH_START_MESSAGING =
        65; // Error occurred during Push Notifications Start Messaging
  }

  enum Severity {
    LOG = 0;      // Log Level Severity
    WARNING = 1;  // Warning Level Severity
    CRITICAL = 2; // Critical Level Severity
    FATAL = 3;    // Fatal Level Severity
  }
}
